--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="dialog_error_title">SQLite3 binary not installed.</string>
     <string name="dialog_yes">Yes, take me there!</string>
     <string name="app_name">\#DebugAllTheThings</string>
+    <string name="google_play_store_debugging">Google Play Store Debugging</string>
+    <string name="play_movies_dogfood">Play Movies Dogfood</string>
+    <string name="google_play_store_dcb_debug">Google Play Store DCB Debug</string>
+    <string name="hangouts_debugging">Hangouts Debugging</string>
+    <string name="play_games_dogfood">Play Games Dogfood</string>
+    <string name="hangouts_gv_sms">Hangouts GV SMS</string>
+    <string name="play_music_debugging">Play Music Debugging</string>
+    <string name="play_books_debugging">Play Books Debugging</string>
 </resources>
